Version 10.4.140 -  27 June 2007, by Thierry Vignaud

- merge "ide" and "all_ide" categories since we now use fully
  modularized ide drivers
- bootloader-config: 
  o configure ide-controller in modprobe.conf for upgrading to kernels 
    with modularized ide drivers

Version 10.4.139 -  27 June 2007, by Thierry Vignaud

- add mandrake_release_info() function

Version 10.4.138 -  21 June 2007, by Thierry Vignaud

- add support for snd-cmi8788 driver
- do not package drakautoinst (#27860)
- draksound:
  o prevent "unlisted driver" error for snd-aoa, snd-cs5530,
    snd-echo3g, snd-usb-caiaq & snd-usb-usx2y drivers
- harddrake UI:
  o stop scannerdrake from fooling us about scanners and from leading
    us to display twice the same device (#31182)

Version 10.4.136 -  12 June 2007, by Thierry Vignaud

- diskdrake
  o fix 1.9TB displayed as 1TB
- drakboot -boot
  o update splash when changing framebuffer resolution (#27470)
- harddrake UI:
  o add a class for biometric sensors (fingerprint for now) (#31182)

Version 10.4.135 -  08 June 2007, by Thierry Vignaud

- interactive layer:
  o enable to override default size with Gtk+ frontend
- drakfont:
  o do not misbelieve a font is already installed if substring of
    another font name
  o simplify finding windows fonts
  o finding windows fonts is now really case insensitive

Version 10.4.134 -  06 June 2007, by Thierry Vignaud

- drakfont:
  o fix crash (#28016)
  o fix enumerating fonts on old windows (#28016)

Version 10.4.133 -  05 June 2007, by Thierry Vignaud

- bootloader-config:
  o handle kernel-xen-uptodate (#31154)
- drakfont: fix crash

Version 10.4.132 -  05 June 2007, by Thierry Vignaud

- fix some UTF8 issue (#31067) (notably drakbug)
- hw support:
  o handle snd-cs5530 driver
- progress bar wait_message: ensure it doesn't go crazy when asked to update
  with the same fraction (eg #30090)
- diskdrake:
  o when formatting ntfs don't zero partition (#30928)
- drakfont: