@@ -1,3 +1,5 @@
+- centralize common textdomains in a single common place, thus ensuring they'll be binded (#31580)
+
 Version 10.4.140 -  27 June 2007, by Thierry Vignaud
 
 - merge "ide" and "all_ide" categories since we now use fully
